--- a/path_find.css
+++ b/path_find.css
@@ -14,25 +14,77 @@
   background:white;
   width:750px;
   height:750px;
-  border: 1px solid black;
+  border: 3px solid silver;
 }
 
 
 .grid {
   float:left;
   background:transparent;
-  box-shadow: inset 0 0 1px silver;
+  box-shadow: inset 0 0 1px grey;
+}
+
+html {
+  height: 100%;
+  background-image:
+  linear-gradient(
+    #e2edff, #5e9bff
+    );
+
 }
 
 body {
   z-index: -10;
   text-align:center;
-  background: #ada695;
+  /*background-image: url("http://worldofdtcmarketing.com/wp-content/uploads/2014/04/Maze.jpg");*/
+  /*background-image: url("http://wallpapercave.com/wp/zE8Atuc.png");*/
+
 
 }
+
 button {
-
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
+	background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
+	background-color:#f9f9f9;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+  padding: 10px;
+  margin: 10px;
 }
+button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
+	background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
+	background-color:#e9e9e9;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
+
 
 .black {
   background: black;
@@ -55,7 +107,7 @@ button {
 }
 
 .green {
-  background: green;
+  background: Chartreuse;
 }
 
 #start {
@@ -73,21 +125,40 @@ button {
 }
 
 .instructions {
-  border:1px solid red;
   width: 18%;
-  margin-bottom: 20px;
+  background: #eff5ff;
+  height:50%;
+    border: 3px solid silver;
+        border-radius: 5px;
 
+}
+
+p {
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: left;
+}
+
+h2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .control-panel {
   display: flex;
   flex-direction: column;
   width: 18%;
+  height:50%;
+  background: #eff5ff;
+    border: 3px solid silver;
+    border-radius: 5px;
 }
 
 .main-box {
+
   display:flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .middle-box {
@@ -97,4 +168,16 @@ button {
   flex-direction: row;
   justify-content: space-around;
   align-items: space-between;
+}
+
+header, footer {
+  width: 750px;
+  height: 50px;
+  background: #eff5ff;
+    border: 3px solid silver;
+    border-radius: 5px;
+}
+
+a {
+  padding: 10px;
 }
