--- a/path_find.css
+++ b/path_find.css
@@ -14,7 +14,7 @@
   background:white;
   width:750px;
   height:750px;
-  border: 3px solid silver;
+  border: 5px solid silver;
 }
 
 
@@ -40,6 +40,12 @@ body {
   /*background-image: url("http://wallpapercave.com/wp/zE8Atuc.png");*/
 
 
+}
+
+input {
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
 }
 
 button {
@@ -126,17 +132,15 @@ button:active {
 
 .instructions {
   width: 18%;
-  background: #eff5ff;
   height:50%;
-    border: 3px solid silver;
-        border-radius: 5px;
-
+      background: transparent;
 }
 
 p {
   padding-left: 5px;
   padding-right: 5px;
   text-align: left;
+  margin: 10px;
 }
 
 h2 {
@@ -149,9 +153,7 @@ h2 {
   flex-direction: column;
   width: 18%;
   height:50%;
-  background: #eff5ff;
-    border: 3px solid silver;
-    border-radius: 5px;
+      background: transparent;
 }
 
 .main-box {
@@ -173,9 +175,10 @@ h2 {
 header, footer {
   width: 750px;
   height: 50px;
-  background: #eff5ff;
-    border: 3px solid silver;
-    border-radius: 5px;
+}
+
+footer {
+  margin-top: 20px;
 }
 
 a {
