--- a/path_find.css
+++ b/path_find.css
@@ -4,6 +4,11 @@
   border: 0;
 }
 
+@font-face {
+  font-family: "CosmicAlien";
+  src: url("assets/fonts/ca.ttf")
+}
+
 .start-end {
   display:flex;
   justify-content: center;
@@ -26,10 +31,10 @@
 
 html {
   height: 100%;
-  background-image:
-  linear-gradient(
-    #e2edff, #5e9bff
-    );
+  background: #CC95C0;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
 
@@ -48,6 +53,11 @@ input {
   text-align: center;
 }
 
+h1 {
+  margin: 35px;
+  font-family: "CosmicAlien";
+  font-size: 72px;
+}
 button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -68,7 +78,7 @@ button {
 	cursor:pointer;
 	color:#666666;
 	font-family:Arial;
-	font-size:15px;
+	font-size:20px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
@@ -141,11 +151,14 @@ p {
   padding-right: 5px;
   text-align: left;
   margin: 10px;
+  font-family: sans-serif;
 }
 
 h2 {
   margin-top: 10px;
   margin-bottom: 10px;
+    font-family: sans-serif;
+    font-size: 32px;
 }
 
 .control-panel {
@@ -165,7 +178,7 @@ h2 {
 
 .middle-box {
   min-width: 1250px;
-  margin-top: 25px;
+  margin-top: 75px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -173,7 +186,6 @@ h2 {
 }
 
 header, footer {
-  width: 750px;
   height: 50px;
 }
 
@@ -183,4 +195,53 @@ footer {
 
 a {
   padding: 10px;
+}
+
+
+
+h1 {
+  text-decoration: none;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+  color:black;
+}
+
+h1 {
+  color: #fff;
+  font-family: CosmicAlien;
+  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
+  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
+  animation: neon1 1.5s ease-in-out infinite alternate;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+/*glow for webkit*/
+
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
+
+@keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
+@media (max-width: 650px) {
+  #container {
+    width: 100%;
+  }
+  h1 {
+    font-size: 3.5em;
+  }
 }
